# Paroles

./: Cargo.toml  io.github.jannuary.Paroles.json  meson.build
data/: io.github.jannuary.Paroles.appdata.xml.in  io.github.jannuary.Paroles.desktop.in  io.github.jannuary.Paroles.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.rs  config.rs  main.rs  meson.build  paroles.gresource.xml  window.rs  window.ui  window.ui2
subprojects/: gtk-blueprint-tool.wrap
